--- a/src/App.module.css
+++ b/src/App.module.css
@@ -25,6 +25,8 @@
 .support {
   background: #de53da;
   padding: 0.5rem 0.5rem 1rem;
+  display: grid;
+  grid-template-columns: 1fr auto;
 }
 
 .apis {
@@ -36,4 +38,11 @@
   background: rgb(0 0 0 / 10%);
   border-radius: 2px;
   padding: 2px 4px;
+}
+
+.build {
+  opacity: 0.5;
+  grid-row: 1/3;
+  grid-column: 2/2;
+  align-self: end;
 }
