--- a/src/App.module.css
+++ b/src/App.module.css
@@ -23,7 +23,7 @@
 }
 
 .support {
-  background: #de53da;
+  background: hsl(278, 68%, 65%);
   padding: 0.5rem 0.5rem 1rem;
   display: grid;
   grid-template-columns: 1fr auto;
@@ -35,9 +35,10 @@
 }
 
 .api {
-  background: rgb(0 0 0 / 10%);
+  background: rgb(255 255 255 / 25%);
   border-radius: 2px;
   padding: 2px 4px;
+  font-weight: bold;
 }
 
 .build {
