--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: Inter, 'Segoe UI', system-ui,  Avenir, Helvetica, Arial, sans-serif;
+  font-family: Inter, 'Segoe UI', system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
   font-size: 12px;
@@ -12,16 +12,6 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
-}
-
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-
-a:hover {
-  color: #535bf2;
 }
 
 body {
@@ -45,15 +35,16 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #e87909;
   cursor: pointer;
-  transition: border-color 0.25s;
+  background-image: linear-gradient(to top, #FF512F 0%, #f07a19 51%, #FF512F 100%);
+  background-size: auto 200%;
+  transition: 0.5s;
   color: black;
   box-shadow: 1px 1.5px 1px rgba(140, 55, 6, 0.8);
 }
 
 button:hover {
-  border-color: #646cff;
+  background-position: bottom center;
 }
 
 button:focus,
@@ -62,7 +53,6 @@ button:focus-visible {
 }
 
 #root {
-  max-width: 1280px;
   width: 100vw;
   height: 100vh;
 }
