--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,8 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  /* prevent zooming and panning */
+  touch-action: none;
 }
 
 h1 {
