--- a/src/App.module.css
+++ b/src/App.module.css
@@ -4,6 +4,8 @@
   height: 100vh;
   display: grid;
   grid-template-rows: auto 1fr auto;
+
+  --border-color: #c8662d;
 }
 
 .buttons {
@@ -18,32 +20,45 @@
   aspect-ratio: 1;
 }
 
-.log {
-  overflow: auto;
+.tabContainer {
 }
 
-.support {
-  background: hsl(278, 68%, 65%);
-  padding: 0.5rem 0.5rem 1rem;
-  display: grid;
-  grid-template-columns: 1fr auto;
-}
-
-.apis {
+.tabSelect {
   display: flex;
-  gap: 2px
+  gap: 0.5rem;
+  border-block-end: thin solid var(--border-color);
+  padding-inline: 0.5rem;
+  padding-block-start: 1rem;
 }
 
-.api {
-  background: rgb(255 255 255 / 25%);
-  border-radius: 2px;
-  padding: 2px 4px;
+.tabContent {
+  padding: 0.5rem;
+}
+
+.tabContent.hidden {
+  display: none;
+}
+
+.tabButton {
+  position: relative;
+  inset-block-start: 1px;
+  appearance: none;
+  color: var(--text-color);
   font-weight: bold;
+  border: thin solid var(--border-color);
+  border-start-start-radius: 0.25rem;
+  border-start-end-radius: 0.25rem;
+  padding-inline: 2rem;
+  padding-block: 0.5rem;
+  background: var(--border-color);
+}
+
+.tabButton.selected {
+  background: transparent;
+  border-block-end: 1px solid var(--bg-color);
 }
 
 .build {
+  padding: 1rem;
   opacity: 0.5;
-  grid-row: 1/3;
-  grid-column: 2/2;
-  align-self: end;
 }
